--- a/sisadex/css/datepicker.css
+++ b/sisadex/css/datepicker.css
@@ -112,7 +112,7 @@
 .ui-datepicker td .ui-state-active{
   background:#BFBFBF;
   margin-bottom:0px;
-  font-size:normal;
+  font-size:medium;
   text-shadow: 0px;
   color: #ffffff;
   -webkit-border-radius: 4px;
@@ -125,7 +125,6 @@
     background: #0064cd;
     background-color: #0064cd;
     background-repeat: repeat-x;
-    background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
     background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
     background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
