--- a/sisadex/css/styles.css
+++ b/sisadex/css/styles.css
@@ -124,7 +124,7 @@ div .alert {
     margin: 3px;
     text-decoration: none;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #3d94f6), color-stop(100%, #1e62d0));
-    background: -moz-linear-gradient(center top, #3d94f6 5%, #1e62d0 100%);
+    background: -moz-linear-gradient(90deg, #3d94f6 5%, #1e62d0 100%);
     background: -ms-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
     background-color: #3d94f6;
@@ -145,7 +145,7 @@ div .alert {
     margin: 3px;
     text-decoration: none;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #9dce2c), color-stop(100%, #8cb82b));
-    background: -moz-linear-gradient(center top, #9dce2c 5%, #8cb82b 100%);
+    background: -moz-linear-gradient(90deg, #9dce2c 5%, #8cb82b 100%);
     background: -ms-linear-gradient(top, #9dce2c 5%, #8cb82b 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9dce2c', endColorstr='#8cb82b');
     background-color: #9dce2c;
