--- a/sisadex/css/modal/basic.css
+++ b/sisadex/css/modal/basic.css
@@ -18,9 +18,9 @@
 
 	height:260px; 
 	width:450px;
-	color:#bbb;
-	background-color:#333; 
-	border:4px solid #444; padding:12px;
+	color:#FFF;
+	background-color:#354C75; 
+	border:4px solid #354C75; padding:12px;
 }
 #simplemodal-container .simplemodal-data {padding:4px;}
 #simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
