--- a/sisadex/css/styles.css
+++ b/sisadex/css/styles.css
@@ -717,6 +717,23 @@ input[readonly] {
     padding-top: 10px;
 }
 
-#showFilters {
+#showFilters{
 	text-decoration: none;	
+}
+
+#showExams {
+text-decoration: none;
+cursor: pointer;
+}
+#simplemodal-container {
+max-height: 800px;
+margin-top: 140px;
+}
+
+#showAgenda {
+text-decoration: none;
+cursor: pointer;
+display: block;
+text-align: right;
+padding-right: 20px;
 }
