--- a/sisadex/css/styles.css
+++ b/sisadex/css/styles.css
@@ -687,7 +687,7 @@ input[readonly] {
 
 
 #legend {
-
+display: block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -711,10 +711,10 @@ input[readonly] {
 
 #filtro {
     width: 900px;
-    display: block;
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
+    display: block;
 }
 
 #showFilters{
@@ -737,3 +737,10 @@ display: block;
 text-align: right;
 padding-right: 20px;
 }
+#yearList {
+  margin-top: 5px;
+  width: 100px;
+  margin-left:auto;
+  margin-right:auto;
+  display: block;
+     }
