--- a/sisadex/css/styles.css
+++ b/sisadex/css/styles.css
@@ -119,16 +119,12 @@ div .alert {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
-    border: 1px solid #3d94f6;
+    border: 1px solid #ccc;
     padding: 5px 9px;
     margin: 3px;
     text-decoration: none;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #3d94f6), color-stop(100%, #1e62d0));
-    background: -moz-linear-gradient(90deg, #3d94f6 5%, #1e62d0 100%);
-    background: -ms-linear-gradient(top, #3d94f6 5%, #1e62d0 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
-    background-color: #3d94f6;
-    color: #ffffff;
+       background-color: #ededed;
+    color: #000;
     display: inline-block;
 }
 
@@ -140,16 +136,12 @@ div .alert {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
-    border: 1px solid #83c41a;
+    border: 1px solid #ccc;
     padding: 5px 9px;
     margin: 3px;
     text-decoration: none;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #9dce2c), color-stop(100%, #8cb82b));
-    background: -moz-linear-gradient(90deg, #9dce2c 5%, #8cb82b 100%);
-    background: -ms-linear-gradient(top, #9dce2c 5%, #8cb82b 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9dce2c', endColorstr='#8cb82b');
-    background-color: #9dce2c;
-    color: #ffffff;
+    background-color: #ededed;
+    color: #000;
     display: inline-block;
 }
 
