--- a/sisadex/css/styles.css
+++ b/sisadex/css/styles.css
@@ -271,16 +271,15 @@ a.boxclose {
 }
 
 #materias-metricas {
-    margin-top: 100px;
     overflow-y: scroll;
     float: right;
     width: 155px;
-    height: 600px;
+    height: 500px;
 }
 
 #planes-metricas {
     display: inline-block;
-    margin-top: 100px;
+    margin-top: 25px;
     width: 155px;
     height: 600px;
     float: left;
@@ -537,14 +536,6 @@ div.color10 {
     box-shadow: 0 0 10px gray;
 }
 
-#middle {
-    float: left;
-    text-align: center;
-    width: 880px;
-    font-style: italic;
-    background-color: #fff !important;
-    color: #aaa !important;
-}
 
 .timeline-axis-text {
     background-color: #fff !important;
@@ -555,6 +546,7 @@ div.color10 {
 #buttons {
     max-width: 500px;
     margin-right: auto;
+    font-style: italic;
     margin-left: auto;
     margin-bottom: 10px;
     padding: 5px;
@@ -734,3 +726,7 @@ padding-right: 20px;
   margin-right:auto;
   display: block;
      }
+
+div.timeline-frame {
+    border: 1px dashed #bebebe;
+}
